implement report extension on api and service layer.
- move html templates from templates/content to templates/html
